first node app deploy

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Marwan01/node-express#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "heroku-cli": "^7.0.9",
     "http-errors": "^1.7.3",
     "jade-bootstrap": "^1.0.14",
     "pug": "^2.0.4"
